# mlops-churn-pipeline

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: retrain.yml
mlops-churn-pipeline/: requirements.txt
mlops-churn-pipeline/.github/workflows/: retrain.yml
mlops-churn-pipeline/src/api/: main.py
mlops-churn-pipeline/src/data/: generate_data.py
mlops-churn-pipeline/src/drift/: detect_drift.py
mlops-churn-pipeline/src/features/: build_features.py
mlops-churn-pipeline/src/training/: retrain.py  train.py
mlops-churn-pipeline/src/utils/: logger.py
