[project]
name = "mlops-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=40.1.2",
    "fastapi>=0.128.0",
    "gpt-folder-tree>=0.2.0",
    "joblib>=1.5.3",
    "mlflow>=3.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "uvicorn>=0.40.0",
]
